--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-eli5==0.0.4
+git+https://github.com/TeamHG-Memex/eli5.git#egg=eli5
 html_text==0.1.0
 kafka-python==1.3.1
 numpy==1.11.1
-scikit-learn==0.17.1
+scikit-learn==0.18
 scipy==0.18.1
 tldextract==2.0.1
