--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-attrs
+attrs==16.2.0
 git+https://github.com/TeamHG-Memex/eli5.git#egg=eli5
 html_text==0.1.0
 json_lines==0.2.0
@@ -6,6 +6,7 @@ kafka-python==1.3.1
 numpy==1.11.2
 scikit-learn==0.18.1
 scipy==0.18.1
+stop-words==2015.2.23.1
 tldextract==2.0.2
 tqdm==4.10.0
 ujson==1.35
