--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 attrs==16.2.0
-git+https://github.com/TeamHG-Memex/eli5.git#egg=eli5
+eli5>=0.3
 html_text==0.1.0
 json_lines==0.2.0
 kafka-python==1.3.1
