--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ eli5>=0.3
 html_text==0.2.1
 json_lines==0.2.0
 kafka-python==1.3.1
+langdetect==1.0.7
 numpy==1.11.2
 scikit-learn==0.18.1
 scipy==0.18.1
