--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ json_lines==0.3.1
 kafka-python==1.3.3
 langdetect==1.0.7
 numpy==1.12.1
+pandas==0.20.3
 scikit-learn==0.18.1
 scipy==0.18.1
 stop-words==2015.2.23.1
